Add solutions for tasks